@@ -286,10 +286,15 @@ The following tags are supported by :program:`MPD`:
 * **date**: the song's release date. This is usually a 4-digit year.
 * **originaldate**: the song's original release date.
 * **composer**: the artist who composed the song.
+* **composersort**: same as composer, but for sorting.
 * **performer**: the artist who performed the song.
 * **conductor**: the conductor who conducted the song.
 * **work**: `"a work is a distinct intellectual or artistic creation,
   which can be expressed in the form of one or more audio recordings" <https://musicbrainz.org/doc/Work>`_
+* **ensemble**: the ensemble performing this song, e.g. "Wiener Philharmoniker".
+* **movement**: name of the movement, e.g. "Andante con moto".
+* **movementnumber**: movement number, e.g. "2" or "II".
+* **location**: location of the recording, e.g. "Royal Albert Hall".
 * **grouping**: "used if the sound belongs to a larger category of
   sounds/music" (`from the IDv2.4.0 TIT1 description
   <http://id3.org/id3v2.4.0-frames>`_).
