@@ -48,9 +48,14 @@ enum TagType
 	TAG_DATE,
 	TAG_ORIGINAL_DATE,
 	TAG_COMPOSER,
+	TAG_COMPOSERSORT,
 	TAG_PERFORMER,
 	TAG_CONDUCTOR,
 	TAG_WORK,
+	TAG_MOVEMENT,
+	TAG_MOVEMENTNUMBER,
+	TAG_ENSEMBLE,
+	TAG_LOCATION,
 	TAG_GROUPING,
 	TAG_COMMENT,
 	TAG_DISC,
